--- a/setup.ipynb
+++ b/setup.ipynb
@@ -142,7 +142,7 @@
         "# Execute the notebook with the input parameters\n",
         "pm.execute_notebook(\n",
         "    input_path=path+'SuaveDispatch.ipynb',\n",
-        "    output_path=path+'test_notebook3.ipynb',\n",
+        "    output_path=path+'notebook_with_param.ipynb',\n",
         "    parameters=input_parameters\n",
         ")"
       ],
