--- a/operations/holoviz/holoviz.ipynb
+++ b/operations/holoviz/holoviz.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,10 +13,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Retrieve survey parameters from the URL"
+    "## 1. Import and setup"
    ]
   },
   {
@@ -24,20 +26,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%javascript\n",
-    "function getQueryStringValue (key)\n",
-    "{  \n",
-    "    return unescape(window.location.search.replace(new RegExp(\"^(?:.*[&\\\\?]\" + escape(key).replace(/[\\.\\+\\*]/g, \"\\\\$&\") + \"(?:\\\\=([^&]*))?)?.*$\", \"i\"), \"$1\"));\n",
-    "}\n",
-    "IPython.notebook.kernel.execute(\"survey_url='\".concat(getQueryStringValue(\"surveyurl\")).concat(\"'\"));\n",
-    "IPython.notebook.kernel.execute(\"views='\".concat(getQueryStringValue(\"views\")).concat(\"'\"));\n",
-    "IPython.notebook.kernel.execute(\"view='\".concat(getQueryStringValue(\"view\")).concat(\"'\"));\n",
-    "IPython.notebook.kernel.execute(\"user='\".concat(getQueryStringValue(\"user\")).concat(\"'\"));\n",
-    "IPython.notebook.kernel.execute(\"csv_file='\".concat(getQueryStringValue(\"csv\")).concat(\"'\")); \n",
-    "IPython.notebook.kernel.execute(\"dzc_file='\".concat(getQueryStringValue(\"dzc\")).concat(\"'\")); \n",
-    "IPython.notebook.kernel.execute(\"params='\".concat(getQueryStringValue(\"params\")).concat(\"'\")); \n",
-    "IPython.notebook.kernel.execute(\"active_object='\".concat(getQueryStringValue(\"activeobject\")).concat(\"'\")); \n",
-    "IPython.notebook.kernel.execute(\"full_notebook_url='\" + window.location + \"'\"); "
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')\n",
+    "\n",
+    "!rm -rf myclone\n",
+    "!git clone --depth 1 \"https://github.com/DDDyylan/Suave_on_Colab.git\" myclone\n",
+    "\n",
+    "%cd /content/myclone/helpers\n",
+    "!git pul"
    ]
   },
   {
@@ -82,6 +78,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,11 +91,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install panel\n",
-    "#!pip install holoviews\n",
-    "#!pip install bokeh\n",
-    "#!pip install hvplot\n",
-    "#!pip install datashader\n",
+    "!pip install panel\n",
+    "!pip install holoviews\n",
+    "!pip install bokeh\n",
+    "!pip install hvplot\n",
+    "!pip install datashader\n",
     "    \n",
     "import holoviews as hv\n",
     "from holoviews import opts\n",
@@ -113,6 +110,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -153,6 +151,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -195,6 +194,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -281,6 +281,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -316,6 +317,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -463,6 +465,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
