--- a/operations/classify/ImageClassify.ipynb
+++ b/operations/classify/ImageClassify.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -12,10 +13,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Retrieve survey parameters from the URL"
+    "## 1. Import libraries"
    ]
   },
   {
@@ -24,27 +26,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%javascript\n",
-    "function getQueryStringValue (key)\n",
-    "{  \n",
-    "    return unescape(window.location.search.replace(new RegExp(\"^(?:.*[&\\\\?]\" + escape(key).replace(/[\\.\\+\\*]/g, \"\\\\$&\") + \"(?:\\\\=([^&]*))?)?.*$\", \"i\"), \"$1\"));\n",
-    "}\n",
-    "IPython.notebook.kernel.execute(\"survey_url='\".concat(getQueryStringValue(\"surveyurl\")).concat(\"'\"));\n",
-    "IPython.notebook.kernel.execute(\"views='\".concat(getQueryStringValue(\"views\")).concat(\"'\"));\n",
-    "IPython.notebook.kernel.execute(\"view='\".concat(getQueryStringValue(\"view\")).concat(\"'\"));\n",
-    "IPython.notebook.kernel.execute(\"user='\".concat(getQueryStringValue(\"user\")).concat(\"'\"));\n",
-    "IPython.notebook.kernel.execute(\"csv_file='\".concat(getQueryStringValue(\"csv\")).concat(\"'\")); \n",
-    "IPython.notebook.kernel.execute(\"dzc_file='\".concat(getQueryStringValue(\"dzc\")).concat(\"'\")); \n",
-    "IPython.notebook.kernel.execute(\"params='\".concat(getQueryStringValue(\"params\")).concat(\"'\")); \n",
-    "IPython.notebook.kernel.execute(\"active_object='\".concat(getQueryStringValue(\"activeobject\")).concat(\"'\")); \n",
-    "IPython.notebook.kernel.execute(\"full_notebook_url='\" + window.location + \"'\"); "
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## 2. Import libraries"
+    "!rm -rf myclone\n",
+    "!git clone --depth 1 \"https://github.com/DDDyylan/Suave_on_Colab.git\" myclone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /content/myclone/helpers\n",
+    "!git pul"
    ]
   },
   {
@@ -90,10 +93,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Read the survey file and navigate to full-size images"
+    "## 2. Read the survey file and navigate to full-size images"
    ]
   },
   {
@@ -110,10 +114,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Specify Clarifai API key\n",
+    "## 3. Specify Clarifai API key\n",
     "<b><h3><span style=\"color:red\">Important: </span>Specify your Clarifai API Key, App ID, Personal Access Token, and User ID, below.<br>You can get them at clarifai.com</h3></b>\n"
    ]
   },
@@ -165,10 +170,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Extract the images, from SuAVE (local to the system) or at URL"
+    "## 4. Extract the images, from SuAVE (local to the system) or at URL"
    ]
   },
   {
@@ -187,10 +193,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Run the classifier"
+    "## 5. Run the classifier"
    ]
   },
   {
@@ -256,10 +263,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Add concepts to dataframe"
+    "## 6. Add concepts to dataframe"
    ]
   },
   {
@@ -320,10 +328,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Save the new version of CSV file, and give a name to new survey"
+    "## 7. Save the new version of CSV file, and give a name to new survey"
    ]
   },
   {
@@ -372,10 +381,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Generate the survey and create survey URL"
+    "## 8. Generate the survey and create survey URL"
    ]
   },
   {
