--- a/operations/maps/Generate_Aggregate_Maps_Suave.ipynb
+++ b/operations/maps/Generate_Aggregate_Maps_Suave.ipynb
@@ -149,7 +149,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<p><span stype=\"color:red\"> Connect to google drive is required</span></p>"
+        "<p><span style=\"color:red\"> Connect to google drive is required</span></p>"
       ],
       "metadata": {
         "id": "C-QXHgb5t6us"
