Uncommenting drive.mount() stuff

--- a/operations/classify/ImageClassify.ipynb
+++ b/operations/classify/ImageClassify.ipynb
@@ -26,8 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/drive')"
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
    ]
   },
   {
