--- a/operations/predict/ExtendModel.ipynb
+++ b/operations/predict/ExtendModel.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from google.colab import drive\n",
-    "# drive.mount('/content/drive')\n",
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')\n",
     "\n",
     "!rm -rf myclone\n",
     "!git clone --depth 1 \"https://github.com/DDDyylan/Suave_on_Colab.git\" myclone\n",
