--- a/operations/stats/Generate_Contingency_Tables.ipynb
+++ b/operations/stats/Generate_Contingency_Tables.ipynb
@@ -61,8 +61,8 @@
       },
       "outputs": [],
       "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
