--- a/operations/tagger/NER.ipynb
+++ b/operations/tagger/NER.ipynb
@@ -91,8 +91,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
         "colab": {
