some typo fixed

--- a/operations/predict/ExtendModel.ipynb
+++ b/operations/predict/ExtendModel.ipynb
@@ -13,7 +13,7 @@
     "!git clone --depth 1 \"https://github.com/DDDyylan/Suave_on_Colab.git\" myclone\n",
     "\n",
     "%cd /content/myclone/helpers\n",
-    "!git pul"
+    "!git pull"
    ]
   },
   {
