--- a/operations/colors/ColorStats.ipynb
+++ b/operations/colors/ColorStats.ipynb
@@ -31,7 +31,7 @@
     "!git clone --depth 1 \"https://github.com/DDDyylan/Suave_on_Colab.git\" myclone\n",
     "\n",
     "%cd /content/myclone/helpers\n",
-    "!git pul"
+    "!git pull"
    ]
   },
   {
