--- a/operations/predict/PredictiveModel_v2.ipynb
+++ b/operations/predict/PredictiveModel_v2.ipynb
@@ -46,7 +46,7 @@
     "!git clone --depth 1 \"https://github.com/DDDyylan/Suave_on_Colab.git\" myclone\n",
     "\n",
     "%cd /content/myclone/helpers\n",
-    "!git pul"
+    "!git pull"
    ]
   },
   {
