--- a/operations/kg/kg_query.ipynb
+++ b/operations/kg/kg_query.ipynb
@@ -4,6 +4,7 @@
       "cell_type": "markdown",
       "id": "e2a02476",
       "metadata": {
+        "id": "e2a02476",
         "papermill": {
           "duration": 0.009857,
           "end_time": "2023-05-25T07:16:26.797401",
@@ -11,8 +12,7 @@
           "start_time": "2023-05-25T07:16:26.787544",
           "status": "completed"
         },
-        "tags": [],
-        "id": "e2a02476"
+        "tags": []
       },
       "source": [
         "# Example queries run on COVID-19 Knowledge Graph on Server\n",
@@ -25,6 +25,7 @@
       "cell_type": "markdown",
       "id": "417e1f7a",
       "metadata": {
+        "id": "417e1f7a",
         "papermill": {
           "duration": 0.01084,
           "end_time": "2023-05-25T07:16:26.818578",
@@ -32,8 +33,7 @@
           "start_time": "2023-05-25T07:16:26.807738",
           "status": "completed"
         },
-        "tags": [],
-        "id": "417e1f7a"
+        "tags": []
       },
       "source": [
         "## 1. Setup"
@@ -44,12 +44,17 @@
       "execution_count": 2,
       "id": "0af339f5",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "execution": {
           "iopub.execute_input": "2023-05-25T07:16:26.850053Z",
           "iopub.status.busy": "2023-05-25T07:16:26.849662Z",
           "iopub.status.idle": "2023-05-25T07:16:28.481242Z",
           "shell.execute_reply": "2023-05-25T07:16:28.478616Z"
         },
+        "id": "0af339f5",
+        "outputId": "6a9ca995-3ed3-48da-eced-20a0af9fb388",
         "papermill": {
           "duration": 1.662817,
           "end_time": "2023-05-25T07:16:28.489989",
@@ -57,17 +62,12 @@
           "start_time": "2023-05-25T07:16:26.827172",
           "status": "completed"
         },
-        "tags": [],
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0af339f5",
-        "outputId": "6a9ca995-3ed3-48da-eced-20a0af9fb388"
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'myclone'...\n",
             "remote: Enumerating objects: 81, done.\u001b[K\n",
@@ -85,7 +85,7 @@
         "drive.mount('/content/drive')\n",
         "\n",
         "!rm -rf myclone\n",
-        "!git clone --depth 1 \"https://github.com/DDDyylan/Suave_on_Colab.git\" myclone\n",
+        "!git clone --depth 1 \"https://github.com/SteveLamont/Suave_on_Colab.git\" myclone\n",
         "\n",
         "%cd /content/myclone/helpers\n",
         "!git pull"
@@ -95,6 +95,7 @@
       "cell_type": "markdown",
       "id": "9d0b9e53",
       "metadata": {
+        "id": "9d0b9e53",
         "papermill": {
           "duration": 0.027676,
           "end_time": "2023-05-25T07:16:28.530451",
@@ -102,8 +103,7 @@
           "start_time": "2023-05-25T07:16:28.502775",
           "status": "completed"
         },
-        "tags": [],
-        "id": "9d0b9e53"
+        "tags": []
       },
       "source": [
         "## 2. Check if the passed parameters are correct "
@@ -114,12 +114,18 @@
       "execution_count": 3,
       "id": "f207316e",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 275
+        },
         "execution": {
           "iopub.execute_input": "2023-05-25T07:16:28.559415Z",
           "iopub.status.busy": "2023-05-25T07:16:28.559016Z",
           "iopub.status.idle": "2023-05-25T07:16:28.579929Z",
           "shell.execute_reply": "2023-05-25T07:16:28.578740Z"
         },
+        "id": "f207316e",
+        "outputId": "b0789e04-7a14-4d2f-960a-c43807d3885a",
         "papermill": {
           "duration": 0.037908,
           "end_time": "2023-05-25T07:16:28.582291",
@@ -127,28 +133,24 @@
           "start_time": "2023-05-25T07:16:28.544383",
           "status": "completed"
         },
-        "tags": [],
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 275
-        },
-        "id": "f207316e",
-        "outputId": "b0789e04-7a14-4d2f-960a-c43807d3885a"
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
+            "text/markdown": [
+              "<b><span style='color:red'>Verify survey parameters: </span></b>"
+            ],
             "text/plain": [
               "<IPython.core.display.Markdown object>"
-            ],
-            "text/markdown": "<b><span style='color:red'>Verify survey parameters: </span></b>"
+            ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Base Survey URL:  https://suave-dev.sdsc.edu/main/file=zaslavsk_WBDH_Participants.csv\n",
             "Enabled Views:  1110101\n",
@@ -215,10 +217,10 @@
       "cell_type": "markdown",
       "id": "4308f2a2",
       "metadata": {
+        "id": "4308f2a2",
         "tags": [
           "papermill-error-cell-tag"
-        ],
-        "id": "4308f2a2"
+        ]
       },
       "source": [
         "<span id=\"papermill-error-cell\" style=\"color:red; font-family:Helvetica Neue, Helvetica, Arial, sans-serif; font-size:2em;\">Execution using papermill encountered an exception here and stopped:</span>"
@@ -229,12 +231,17 @@
       "execution_count": 5,
       "id": "74faa3fc",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "execution": {
           "iopub.execute_input": "2023-05-25T07:16:28.603562Z",
           "iopub.status.busy": "2023-05-25T07:16:28.602843Z",
           "iopub.status.idle": "2023-05-25T07:16:28.977268Z",
           "shell.execute_reply": "2023-05-25T07:16:28.975767Z"
         },
+        "id": "74faa3fc",
+        "outputId": "99bb360a-ce65-4f8d-fd04-79f3049bfe59",
         "papermill": {
           "duration": 0.387796,
           "end_time": "2023-05-25T07:16:28.979301",
@@ -242,17 +249,12 @@
           "start_time": "2023-05-25T07:16:28.591505",
           "status": "failed"
         },
-        "tags": [],
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "74faa3fc",
-        "outputId": "99bb360a-ce65-4f8d-fd04-79f3049bfe59"
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting py2neo\n",
@@ -287,6 +289,7 @@
       "cell_type": "markdown",
       "id": "397719bc",
       "metadata": {
+        "id": "397719bc",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -294,8 +297,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "397719bc"
+        "tags": []
       },
       "source": [
         "### Examining the input against the KG capabilities:\n",
@@ -317,6 +319,7 @@
       "execution_count": null,
       "id": "67e69115",
       "metadata": {
+        "id": "67e69115",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -324,8 +327,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "67e69115"
+        "tags": []
       },
       "outputs": [],
       "source": []
@@ -335,6 +337,7 @@
       "execution_count": null,
       "id": "d663e295",
       "metadata": {
+        "id": "d663e295",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -342,8 +345,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "d663e295"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -356,6 +358,7 @@
       "execution_count": null,
       "id": "cd95a97e",
       "metadata": {
+        "id": "cd95a97e",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -363,8 +366,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "cd95a97e"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -375,6 +377,7 @@
       "cell_type": "markdown",
       "id": "8f3c2090",
       "metadata": {
+        "id": "8f3c2090",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -382,8 +385,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "8f3c2090"
+        "tags": []
       },
       "source": [
         "### List Organisms in KG"
@@ -394,6 +396,7 @@
       "execution_count": null,
       "id": "aaf731c3",
       "metadata": {
+        "id": "aaf731c3",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -401,8 +404,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "aaf731c3"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -417,6 +419,7 @@
       "cell_type": "markdown",
       "id": "e9c0b3af",
       "metadata": {
+        "id": "e9c0b3af",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -424,8 +427,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "e9c0b3af"
+        "tags": []
       },
       "source": [
         "### List Coronavirus Outbreaks"
@@ -436,6 +438,7 @@
       "execution_count": null,
       "id": "2b8da6ed",
       "metadata": {
+        "id": "2b8da6ed",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -443,8 +446,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "2b8da6ed"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -459,6 +461,7 @@
       "cell_type": "markdown",
       "id": "b6fe9afb",
       "metadata": {
+        "id": "b6fe9afb",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -466,8 +469,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "b6fe9afb"
+        "tags": []
       },
       "source": [
         "### List Strains that are mentioned in PubMed Central Articles"
@@ -478,6 +480,7 @@
       "execution_count": null,
       "id": "e36a18a4",
       "metadata": {
+        "id": "e36a18a4",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -485,8 +488,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "e36a18a4"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -503,6 +505,7 @@
       "cell_type": "markdown",
       "id": "b75fcfbc",
       "metadata": {
+        "id": "b75fcfbc",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -510,8 +513,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "b75fcfbc"
+        "tags": []
       },
       "source": [
         "### List Gene and Protein information for Reference Genome\n",
@@ -523,6 +525,7 @@
       "execution_count": null,
       "id": "4b114dde",
       "metadata": {
+        "id": "4b114dde",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -530,8 +533,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "4b114dde"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -549,6 +551,7 @@
       "execution_count": null,
       "id": "af11f910",
       "metadata": {
+        "id": "af11f910",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -556,8 +559,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "af11f910"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -568,6 +570,7 @@
       "cell_type": "markdown",
       "id": "1716623a",
       "metadata": {
+        "id": "1716623a",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -575,8 +578,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "1716623a"
+        "tags": []
       },
       "source": [
         "### Cases in a specific County (Admin2)"
@@ -587,6 +589,7 @@
       "execution_count": null,
       "id": "d73cfd65",
       "metadata": {
+        "id": "d73cfd65",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -594,8 +597,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "d73cfd65"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -614,6 +616,7 @@
       "cell_type": "markdown",
       "id": "569b9707",
       "metadata": {
+        "id": "569b9707",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -621,8 +624,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "569b9707"
+        "tags": []
       },
       "source": [
         "### Aggregate cases by State (Admin1)"
@@ -633,6 +635,7 @@
       "execution_count": null,
       "id": "206d57a6",
       "metadata": {
+        "id": "206d57a6",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -640,8 +643,7 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "206d57a6"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -658,6 +660,7 @@
       "execution_count": null,
       "id": "7e6ea63a",
       "metadata": {
+        "id": "7e6ea63a",
         "papermill": {
           "duration": null,
           "end_time": null,
@@ -665,14 +668,16 @@
           "start_time": null,
           "status": "pending"
         },
-        "tags": [],
-        "id": "7e6ea63a"
+        "tags": []
       },
       "outputs": [],
       "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -711,9 +716,6 @@
       },
       "start_time": "2023-05-25T07:16:25.359297",
       "version": "2.4.0"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
