--- a/operations/stats/Generate_Factor_Contributions.ipynb
+++ b/operations/stats/Generate_Factor_Contributions.ipynb
@@ -176,7 +176,7 @@
         "import re\n",
         "import datetime\n",
         "import pandas as pd    \n",
-        "import panel as pnne\n",
+        "import panel as pn\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from helper import *\n",
