--- a/operations/stats/Generate_Factor_Contributions.ipynb
+++ b/operations/stats/Generate_Factor_Contributions.ipynb
@@ -179,7 +179,7 @@
         "import panel as pn\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "from helper import *\n",
+        "from myclone.operations.stats.helper import *\n",
         "\n",
         "pn.extension('tabulator')\n",
         "def printmd(string):\n",
